--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -2,7 +2,7 @@
 
 <div class="flex flex-wrap justify-start">
   {% for beer in beers %}
-    <div class="self-center max-w-xs mx-auto overflow-hidden bg-emerald-900 rounded-lg shadow-lg m-2 hover:shadow-md hover:grayscale-[30%]">
+    <div class="self-start max-w-xs mx-auto overflow-hidden bg-emerald-900 rounded-lg shadow-lg m-2 hover:shadow-md hover:grayscale-[30%]">
       <a href="{{ beer.url | prepend: beer.baseurl }}">
         <div class="px-4 py-2">
           <h1 class="text-3xl font-bold text-white uppercase">{{ beer.name }}</h1>
