--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       <div class="container px-6 py-4 mx-auto">
           <div class="lg:flex">
               <div class="mt-6 lg:mt-0 lg:flex-1">
-                  <div class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-2">
+                  <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
                     <div>
                       <h3 class="text-gray-700 uppercase">Kontakt</h3>
                       <a href="tel:+46700000000" class="block mt-2 text-sm text-gray-600 hover:underline">070-nånting</a>
@@ -12,8 +12,8 @@
 
                     <div>
                         <h3 class="text-gray-700 uppercase"></h3>
-                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="block mt-2 text-sm text-gray-600 over:underline after:content-['_↗']">Untappd</a>
-                        <a href="//instagram.com/gagnefbrewing" target="_blank" class="block mt-2 text-sm text-gray-600 hover:underline after:content-['_↗']">Instagram</a>
+                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="block mt-2 text-sm text-gray-600 over:underline">Untappd</a>
+                        <a href="//instagram.com/gagnefbrewing" target="_blank" class="block mt-2 text-sm text-gray-600 hover:underline">Instagram</a>
                     </div>
                   </div>
               </div>
