--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
 <nav class="bg-emerald-900 shadow">
   <div class="container px-6 py-4 mx-auto lg:flex lg:justify-between sm:justify-center lg:items-center">
       <div class="lg:flex lg:items-center">
-          <div class="flex items-center justify-center">
+          <div class="flex items-center justify-center md:justify-between">
               <div>
                   <a class="" href="/">
                     <img src="/assets/images/logo.png" class="h-24 md:m-4 sm:mb-4 transition duration-200 transform hover:invert"/>
