Add permalinks, no more.html

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -12,7 +12,7 @@
 
           <div class="flex flex-col text-gray-100 capitalize lg:flex lg:px-16 lg:-mx-4 lg:flex-row lg:items-center">
               <a href="/beers" class="mt-2 transition-colors duration-200 transform lg:mt-0 lg:mx-4 hover:text-gray-900">Våra öl</a>
-              <a href="/bryggeriet" class="mt-2 transition-colors duration-200 transform lg:mt-0 lg:mx-4 hover:text-gray-900">Bryggeriet</a>
+              <a href="/brewery" class="mt-2 transition-colors duration-200 transform lg:mt-0 lg:mx-4 hover:text-gray-900">Bryggeriet</a>
           </div>
       </div>
   </div>
