--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,8 @@
                       <h3 class="text-gray-700 uppercase">Kontakt</h3>
                       <a href="tel:+46700000000" class="block mt-2 text-sm text-gray-600 hover:underline">070-nånting</a>
                       <a href="mailto:example.com" class="block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>
+                      <p class="block mt-2 text-gray-600 text-sm">Hedvägen 21</p>
+                      <p class="block mt-2 text-gray-600 text-sm">785 42 Mockfjärd</p>
                     </div>
 
                     <div>
