--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 
 <nav class="bg-emerald-900 shadow">
-  <div class="container px-6 py-4 mx-auto lg:flex lg:justify-between sm:justify-center lg:items-center">
-      <div class="lg:flex lg:items-center">
+  <div class="container px-6 py-4 mx-auto md:flex md:justify-between sm:justify-center md:items-center">
+      <div class="md:flex md:items-center">
           <div class="flex items-center justify-center md:justify-between">
               <div>
                   <a class="" href="/">
@@ -10,9 +10,9 @@
               </div>
           </div>
 
-          <div class="flex flex-col text-gray-100 capitalize lg:flex lg:px-16 lg:-mx-4 lg:flex-row lg:items-center">
-              <a href="/beers" class="mt-2 transition-colors duration-200 transform lg:mt-0 lg:mx-4 hover:text-gray-900">Våra öl</a>
-              <a href="/brewery" class="mt-2 transition-colors duration-200 transform lg:mt-0 lg:mx-4 hover:text-gray-900">Bryggeriet</a>
+          <div class="flex flex-col text-gray-100 capitalize md:flex md:px-16 md:mx-4 md:flex-row md:items-center">
+              <a href="/beers" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Våra öl</a>
+              <a href="/brewery" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Bryggeriet</a>
           </div>
       </div>
   </div>
