--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,3 @@
-
 <nav class="bg-emerald-900 shadow">
   <div class="container px-6 py-4 mx-auto md:flex md:justify-between sm:justify-center md:items-center">
       <div class="md:flex md:items-center">
@@ -11,7 +10,7 @@
           </div>
 
           <div class="flex flex-col text-gray-100 capitalize md:flex md:px-16 md:mx-4 md:flex-row md:items-center">
-              <a href="/beers" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Våra öl</a>
+              <a href="/products" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Produkter</a>
               <a href="/brewery" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Bryggeriet</a>
           </div>
       </div>
