--- a/_layouts/beer.html
+++ b/_layouts/beer.html
@@ -16,8 +16,8 @@ layout: default
           </svg>
       </span>
 
-      <a href="/beers" class="text-gray-600 hover:underline">
-          Våra öl
+      <a href="/products" class="text-gray-600 hover:underline">
+          Produkter
       </a>
 
       <span class="mx-5 text-gray-500">
