--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="bg-emerald-900 shadow">
+<nav class="bg-teal-800 shadow">
   <div class="container px-6 py-4 mx-auto md:flex md:justify-between sm:justify-center md:items-center">
       <div class="md:flex md:items-center">
           <div class="flex items-center justify-center md:justify-between">
