--- a/_layouts/beer.html
+++ b/_layouts/beer.html
@@ -26,7 +26,7 @@ layout: default
           </svg>
       </span>
 
-      <a href="{{ page.url }}" class="text-emerald-600 hover:underline">
+      <a href="{{ page.url }}" class="text-teal-600 hover:underline">
           {{ page.name }}
       </a>
   </div>
