--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -2,7 +2,7 @@
 
 <div class="flex flex-wrap justify-start">
   {% for beer in beers %}
-    <div class="self-start max-w-xs mx-auto overflow-hidden bg-emerald-900 rounded-lg shadow-lg m-2 hover:shadow-md hover:grayscale-[30%]">
+    <div class="self-start max-w-xs mx-auto overflow-hidden bg-teal-800 rounded-lg shadow-lg m-2 hover:shadow-md hover:grayscale-[30%]">
       <a href="{{ beer.url | prepend: beer.baseurl }}">
         <div class="px-4 py-2">
           <h1 class="text-3xl font-bold text-white uppercase">{{ beer.name }}</h1>
@@ -11,7 +11,7 @@
       
         <img class="object-cover w-full h-48 mt-2" src="{{ beer.image }}" alt="{{ beer.name }}">
       
-        <div class="flex items-center justify-between px-4 py-2 bg-emerald-900">
+        <div class="flex items-center justify-between px-4 py-2 bg-teal-800">
           <h1 class="text-lg font-bold text-white">{{ beer.type }}</h1>
           <button class="px-2 py-1 text-xs font-semibold text-gray-900 uppercase transition-colors duration-200 transform bg-white rounded hover:bg-gray-200 focus:bg-gray-400 focus:outline-none">Läs mer</button>
         </div>
