--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -1,21 +1,21 @@
 {% assign beers = site.beers | sort: "sale_date" | reverse %}
 
-<div class="flex flex-wrap justify-start">
-  {% for beer in beers %}
-    <div class="self-start max-w-xs mx-auto overflow-hidden bg-teal-800 rounded-lg shadow-lg m-2 hover:shadow-md hover:grayscale-[30%]">
-      <a href="{{ beer.url | prepend: beer.baseurl }}">
-        <div class="px-4 py-2">
-          <h1 class="text-3xl font-bold text-white uppercase">{{ beer.name }}</h1>
-          <p class="mt-1 text-sm text-gray-200">{{ beer.description }}</p>
+{% for beer in beers %}
+<div class="container px-6 py-16 mx-auto">
+    <div class="items-center lg:flex">
+      <div class="flex items-center justify-center w-full mt-6 lg:mt-0 lg:w-1/2">
+        <img class="w-full h-full lg:max-w-2xl rounded-md" src="{{ beer.image }}" alt="{{ beer.name }}">
+      </div>
+
+      <div class="w-full lg:w-1/2 p-4">
+        <div class="lg:max-w-lg">
+          <h1 class="text-2xl font-semibold text-gray-800 uppercase lg:text-3xl">{{ beer.name }}</h1>
+          <p class="mt-2 text-gray-600">{{ beer.description }}</p>
+          <a href="{{ beer.url | prepend: beer.baseurl }}">
+            <button class="w-full px-3 py-2 mt-6 text-xs font-medium text-white uppercase transition-colors duration-200 transform bg-teal-800 rounded-md lg:w-auto hover:bg-teal-600 focus:outline-none focus:bg-blue-500">Läs mer</button>
+          </a>
         </div>
-      
-        <img class="object-cover w-full h-48 mt-2" src="{{ beer.image }}" alt="{{ beer.name }}">
-      
-        <div class="flex items-center justify-between px-4 py-2 bg-teal-800">
-          <h1 class="text-lg font-bold text-white">{{ beer.type }}</h1>
-          <button class="px-2 py-1 text-xs font-semibold text-gray-900 uppercase transition-colors duration-200 transform bg-white rounded hover:bg-gray-200 focus:bg-gray-400 focus:outline-none">Läs mer</button>
-        </div>
-      </a>
+      </div>
     </div>
-  {% endfor %}
 </div>
+{% endfor %}
