--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include menu.html %}
 
-    <div class="md:container md:mx-auto mb-4">
+    <div class="bg-white md:container md:mx-auto pb-4">
       {{ content }}
     </div>
 
