--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,13 @@
                     <div>
                       <h3 class="text-gray-700 uppercase">Kontakt</h3>
                       <a href="mailto:example.com" class="block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>
-                      <p class="block mt-2 text-gray-600 text-sm">Hedvägen 21</p>
+                      <p class="block mt-2 text-gray-600 text-sm">Hedvägen 13</p>
                       <p class="block mt-2 text-gray-600 text-sm">785 42 Mockfjärd</p>
                     </div>
 
                     <div>
                         <h3 class="text-gray-700 uppercase"></h3>
-                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="block mt-2 text-sm text-gray-600 over:underline">Untappd</a>
+                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="block mt-2 text-sm text-gray-600 hover:underline">Untappd</a>
                         <a href="//instagram.com/gagnefbrewing" target="_blank" class="block mt-2 text-sm text-gray-600 hover:underline">Instagram</a>
                     </div>
                   </div>
@@ -21,7 +21,7 @@
           </div>
 
           <div class="my-6">
-              <p class="text-center text-gray-800">© Gagnef Brewing 2022</p>
+            <p class="text-gray-600">© Gagnef Brewing {{ 'now' | date: "%Y" }}</p>
           </div>
       </div>
   </footer>
