--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-white">
 
   {% include head.html %}
 
   <body>
-
     {% include menu.html %}
 
     <div class="bg-white md:container md:mx-auto pb-4">
@@ -12,7 +11,8 @@
     </div>
 
     {% include footer.html %}
-
+    {% include age-check.html %}
+    {% include cookie-consent.html %}
   </body>
 
 </html>
