--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html class="bg-white">
   {% include head.html %}
 
   <body>
@@ -8,4 +7,6 @@
   </body>
 
   {% include footer.html %}
+  {% include age-check.html %}
+  {% include cookie-consent.html %}
 </html>
