--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,15 +6,28 @@
                   <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
                     <div>
                       <h3 class="text-gray-700 uppercase">Kontakt</h3>
-                      <a href="mailto:example.com" class="block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>
-                      <p class="block mt-2 text-gray-600 text-sm">Hedvägen 13</p>
-                      <p class="block mt-2 text-gray-600 text-sm">785 42 Mockfjärd</p>
+                      <div class="block">
+                        <a href="mailto:example.com" class="inline-block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>
+                      </div>
+                      <div class="block">
+                        <p class="inline-block mt-2 text-gray-600 text-sm">Hedvägen 13</p>
+                      </div>
+                      <div class="block">
+                        <p class="inline-block mt-2 text-gray-600 text-sm">785 42 Mockfjärd</p>
+                      </div>
                     </div>
 
                     <div>
                         <h3 class="text-gray-700 uppercase"></h3>
-                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="block mt-2 text-sm text-gray-600 hover:underline">Untappd</a>
-                        <a href="//instagram.com/gagnefbrewing" target="_blank" class="block mt-2 text-sm text-gray-600 hover:underline">Instagram</a>
+                        <div class="block">
+                          <a href="//untappd.com/GagnefBrewing" target="_blank" class="inline-block mt-2 text-sm text-gray-600 hover:underline">Untappd</a>
+                        </div>
+                        <div class="block">
+                          <a href="//instagram.com/gagnefbrewing" target="_blank" class="inline-block mt-2 text-sm text-gray-600 hover:underline">Instagram</a>
+                        </div>
+                        <div class="block">
+                          <a href="/cookies-privacy" class="inline-block mt-6 text-sm text-gray-600 hover:underline">Cookies & Privacy Policy</a>
+                        </div>
                     </div>
                   </div>
               </div>
