--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="{{site.title}}" />
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://gagnef-brewing.github.io/" />
+  <meta property="og:url" content="https://gagnefbrewing.com" />
   <meta property="og:image" content="{{site.og_image}}" />
   <meta property="og:locale" content="sv_SE" />
 
