Remove placeholder beer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                     <div>
                       <h3 class="text-gray-700 uppercase">Kontakt</h3>
                       <div class="block">
-                        <a href="mailto:example.com" class="inline-block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>
+                        <!--<a href="mailto:example.com" class="inline-block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>-->
                       </div>
                       <div class="block">
                         <p class="inline-block mt-2 text-gray-600 text-sm">Hedvägen 13</p>
