--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -12,7 +12,7 @@
             <h1 class="text-2xl font-semibold text-gray-800 uppercase lg:text-3xl">{{ beer.name }}</h1>
             <p class="mt-2 text-gray-600">{{ beer.description }}</p>
             <a href="{{ beer.url | prepend: beer.baseurl }}">
-              <button class="w-full px-3 py-2 mt-6 text-xs font-medium text-white uppercase transition-colors duration-200 transform bg-teal-800 rounded-md lg:w-auto hover:bg-teal-600 focus:outline-none focus:bg-blue-500">Läs mer</button>
+              <button class="w-full px-3 py-2 mt-6 text-xs font-medium text-white uppercase transition-colors duration-200 transform bg-teal-800 rounded-md lg:w-auto hover:bg-teal-600 focus:outline-none focus:bg-teal-500">Läs mer</button>
             </a>
           </div>
         </div>
