Fix margin at logo

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,7 +4,7 @@
           <div class="flex items-center justify-center md:justify-between">
               <div>
                   <a class="" href="/">
-                    <img src="/assets/images/logo.png" class="h-24 md:m-4 sm:mb-4 transition duration-200 transform invert hover:invert-0"/>
+                    <img src="/assets/images/logo.png" class="h-24 m-4 transition duration-200 transform invert hover:invert-0"/>
                   </a>
               </div>
           </div>
