--- a/_includes/age-check.html
+++ b/_includes/age-check.html
@@ -7,7 +7,7 @@
     <h2 class="mt-2 text-2xl font-semibold text-gray-800 md:mt-0 md:text-3xl">Ålderskontroll</h2>
 
     <p class="mt-2 text-gray-600">Här förekommer det information om <span class="font-medium">alkoholhaltiga</span> drycker och du <span class="font-medium">måste</span> vara över 20 år för att gå vidare.</p>
-    <p class="mt-2 text-xs italic text-gray-600">ps. Genom att <span id="accept-cookies" class="hover:underline cursor-pointer font-semibold">tillåta kakor</span> slipper du detta framöver</p>
+    <p class="mt-2 text-xs italic text-gray-600">Genom att <span id="accept-cookies" class="hover:underline cursor-pointer font-semibold">tillåta kakor</span> sparas ditt val.</p>
     
     <div class="flex justify-between mt-4 ">
       <button id="age-ok" class="text-l font-medium text-teal-500">Jag är över 20 år</button>
