--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,10 @@
   <meta property="og:image" content="{{site.og_image}}" />
   <meta property="og:locale" content="sv_SE" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
   <script>
     function createCookie(name,value,days) {
       var expires = "";
