Fixing construction-bug

--- a/_includes/under-contruction.html
+++ b/_includes/under-contruction.html
@@ -1,4 +1,4 @@
-<div id="construction-info" class="w-full text-white bg-blue-500">
+<div id="construction-info" class="w-full text-white bg-blue-500 z-10">
   <div class="container flex items-center justify-between px-6 py-4 mx-auto">
     <div class="flex">
       <p class="mx-3">Kul att se dig! Vi håller just nu på att brygga hemsidan. Snart klart för tappning!</p>
