Fix z-index bug on age check

--- a/_includes/age-check.html
+++ b/_includes/age-check.html
@@ -1,4 +1,4 @@
-<div id="age-check" class="fixed w-screen h-screen top-0 left-0 bg-white bg-opacity-50 flex justify-center sm:items-center sm:pt-0 pt-32 items-start backdrop-blur-md overflow-hidden">
+<div id="age-check" class="z-20 fixed w-screen h-screen top-0 left-0 bg-white bg-opacity-50 flex justify-center sm:items-center sm:pt-0 pt-32 items-start backdrop-blur-md overflow-hidden">
   <div class="max-w-md px-8 py-4 mx-auto mt-16 bg-white rounded-lg shadow-lg">
     <div class="flex justify-center -mt-16 md:justify-end">
       <img class="object-cover w-20 h-20" alt="Logo" src="/assets/images/logo.png">
