--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -1,4 +1,4 @@
-<div id="cookie-notice" class="fixed block bottom-0 left-0 p-4 bg-white w-full text-gray-600">
+<div id="cookie-notice" class="z-20 fixed block bottom-0 left-0 p-4 bg-white w-full text-gray-600">
   <p>Vi vill gärna bjuda på en kaka eller två för att hemsidan ska bli så mumsig som möjligt.</p>
   <p class="mb-2">Är det okej med dig?</p>
   
