--- a/_includes/big-button.html
+++ b/_includes/big-button.html
@@ -1,3 +1,3 @@
-<button class="text-xl sm:text-2xl px-4 py-2 font-medium tracking-wide text-white transition-colors duration-200 transform rounded-md ring ring-white hover:bg-teal-600 focus:outline-none focus:ring-opacity-80">
+<button class="w-full sm:w-auto text-xl sm:text-2xl px-4 py-2 font-medium tracking-wide text-white transition-colors duration-200 transform rounded-md ring ring-white hover:bg-teal-600 focus:outline-none focus:ring-opacity-80">
   {{ include.text }}
 </button>
