--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,18 +1,25 @@
-<nav class="bg-teal-800 shadow">
+<nav class="bg-white">
   <div class="container px-6 py-4 mx-auto md:flex md:justify-between sm:justify-center md:items-center">
       <div class="md:flex md:items-center">
-          <div class="flex items-center justify-center md:justify-between">
-              <div>
-                  <a class="" href="/">
-                    <img src="/assets/images/logo.png" class="h-24 m-4 transition duration-200 transform invert hover:invert-0"/>
-                  </a>
-              </div>
+        <div class="flex items-center justify-center md:justify-between">
+          <div>
+            <a href="/">
+              <img src="/assets/images/logo.png" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1]"/>
+            </a>
           </div>
+        </div>
 
-          <div class="flex flex-col text-gray-100 capitalize md:flex md:px-16 md:mx-4 md:flex-row md:items-center">
-              <a href="/products" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Produkter</a>
-              <a href="/brewery" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-900">Bryggeriet</a>
-          </div>
+        <div class="flex flex-col text-gray-900 capitalize md:flex md:px-16 md:mx-4 md:flex-row md:items-center">
+          {% for page_data in site.data.page_data %}
+            {% for pg in page_data %}
+              {%
+                include menu-list-item.html
+                url = pg.url
+                text = pg.title
+              %}
+            {% endfor %}
+          {% endfor %}
+        </div>
       </div>
   </div>
 </nav>
