Another bundle. Sorry.

--- a/_layouts/beer.html
+++ b/_layouts/beer.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container flex flex-col px-6 py-10 mx-auto space-y-6 lg:h-[32rem] lg:py-16 lg:flex-row lg:items-center">
   <div class="w-full lg:w-1/2">
       <div class="lg:max-w-lg">
-          <h1 class="text-2xl font-medium tracking-wide text-gray-800 lg:text-4xl">{{ page.name }}</h1>
+          <h1 class="font-title text-4xl font-medium tracking-wide text-gray-800 lg:text-6xl">{{ page.name }}</h1>
           <p class="mt-2 text-gray-600">{{ page.description }}</p>
           <div class="grid gap-6 mt-8 sm:grid-cols-2">
               <div class="flex items-center text-gray-800 -px-3">
