--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -1,18 +1,22 @@
 {% assign beers = site.beers | sort: "sale_date" | reverse %}
 
 {% for beer in beers %}
-  <div class="container py-16 mx-auto bg-white">
-      <div class="items-center lg:flex">
-        <div class="flex items-center justify-center w-full mt-6 lg:mt-0 lg:w-1/2">
-          <img class="w-full h-full lg:max-w-2xl rounded-md" src="{{ beer.image }}" alt="{{ beer.name }}">
+  <div class="container mx-auto bg-white">
+      <div class="items-center flex flex-col sm:flex-row">
+        <div class="flex items-center justify-center w-full mt-6 lg:mt-0">
+          <a href="{{ beer.url | prepend: beer.baseurl }}">
+            <img class="w-full lg:max-w-2xl rounded-md" src="{{ beer.image }}" alt="{{ beer.name }}">
+          </a>
         </div>
 
-        <div class="w-full lg:w-1/2 p-4">
-          <div class="lg:max-w-lg">
-            <h1 class="text-2xl font-semibold text-gray-800 uppercase lg:text-3xl">{{ beer.name }}</h1>
-            <p class="mt-2 text-gray-600">{{ beer.description }}</p>
+        <div class="sm:flex sm:flex-col mt-6 space-y-4">
+          <h1 class="text-6xl font-title font-semibold text-gray-800 uppercase lg:text-8xl text-center">{{ beer.name }}, {{ beer.alcohol }}</h1>
+
+          <div class="sm:flex w-full place-content-end">
             <a href="{{ beer.url | prepend: beer.baseurl }}">
-              <button class="w-full px-3 py-2 mt-6 text-xs font-medium text-white uppercase transition-colors duration-200 transform bg-teal-800 rounded-md lg:w-auto hover:bg-teal-600 focus:outline-none focus:bg-teal-500">Läs mer</button>
+              <button class="my-4 w-full sm:w-auto text-xl sm:text-xl px-4 py-2 font-medium tracking-wide text-gray-600 transition-colors duration-200 transform rounded-md ring ring-teal-600 hover:bg-teal-600 focus:outline-none focus:ring-opacity-80 hover:text-white">
+                Läs mer
+              </button>
             </a>
           </div>
         </div>
