--- a/_includes/menu-list-item.html
+++ b/_includes/menu-list-item.html
@@ -1,1 +1,3 @@
-<a href="{{ include.url }}" class="mt-2 transition-colors duration-200 transform md:mt-0 md:mx-4 hover:text-gray-600">{{ include.text }}</a>
+<a href="{{ include.url }}" class="mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:text-gray-500">
+  {{ include.text }}
+</a>
