--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <nav class="bg-white">
-  <div class="container px-6 py-4 mx-auto md:flex md:justify-between sm:justify-center md:items-center">
-      <div class="md:flex md:items-center">
-        <div class="flex items-center justify-center md:justify-between">
+  <div class="container p-4 mx-auto sm:flex sm:justify-between sm:justify-center sm:items-center">
+      <div class="sm:flex sm:items-center">
+        <div class="flex items-center justify-center sm:justify-between">
           <div>
             <a href="/">
               <img src="/assets/images/logo.png" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1]"/>
@@ -9,7 +9,7 @@
           </div>
         </div>
 
-        <div class="flex flex-col text-gray-900 capitalize md:flex md:px-16 md:mx-4 md:flex-row md:items-center">
+        <div class="flex flex-col text-gray-900 capitalize sm:flex sm:px-16 sm:mx-4 sm:flex-row sm:items-center">
           {% for page_data in site.data.page_data %}
             {% for pg in page_data %}
               {%
