Skip age check on cookie page

--- a/_includes/age-check.html
+++ b/_includes/age-check.html
@@ -1,36 +1,38 @@
-<div id="age-check" class="z-20 fixed w-screen h-screen top-0 left-0 bg-white bg-opacity-50 flex justify-center sm:items-center sm:pt-0 pt-32 items-start backdrop-blur-md overflow-hidden">
-  <div class="max-w-md px-8 py-4 mx-auto mt-16 bg-white rounded-lg shadow-lg">
-    <div class="flex justify-center -mt-16 md:justify-end">
-      <img class="object-cover w-20 h-20" alt="Logo" src="/assets/images/logo.png">
-    </div>
+{% if page.skip_age != true %}
+  <div id="age-check" class="z-20 fixed w-screen h-screen top-0 left-0 bg-white bg-opacity-50 flex justify-center sm:items-center sm:pt-0 pt-32 items-start backdrop-blur-md overflow-hidden">
+    <div class="max-w-md px-8 py-4 mx-auto mt-16 bg-white rounded-lg shadow-lg">
+      <div class="flex justify-center -mt-16 md:justify-end">
+        <img class="object-cover w-20 h-20" alt="Logo" src="/assets/images/logo.png">
+      </div>
 
-    <h2 class="mt-2 text-2xl font-semibold text-gray-800 md:mt-0 md:text-3xl">Ålderskontroll</h2>
+      <h2 class="mt-2 text-2xl font-semibold text-gray-800 md:mt-0 md:text-3xl">Ålderskontroll</h2>
 
-    <p class="mt-2 text-gray-600">Här förekommer det information om <span class="font-medium">alkoholhaltiga</span> drycker och du <span class="font-medium">måste</span> vara över 20 år för att gå vidare.</p>
-    <p class="mt-2 text-xs italic text-gray-600">Genom att <span id="accept-cookies" class="hover:underline cursor-pointer font-semibold">tillåta kakor</span> sparas ditt val.</p>
-    
-    <div class="flex justify-between mt-4 ">
-      <button id="age-ok" class="text-l font-medium text-teal-500">Jag är över 20 år</button>
-      <a href="//leoslekland.se/" id="age-fail" class="text-l text-teal-500">Jag är ett barn</a>
+      <p class="mt-2 text-gray-600">Här förekommer det information om <span class="font-medium">alkoholhaltiga</span> drycker och du <span class="font-medium">måste</span> vara över 20 år för att gå vidare.</p>
+      <p class="mt-2 text-xs italic text-gray-600">Genom att <span id="accept-cookies" class="hover:underline cursor-pointer font-semibold">tillåta kakor</span> sparas ditt val.</p>
+      
+      <div class="flex justify-between mt-4 ">
+        <button id="age-ok" class="text-l font-medium text-teal-500">Jag är över 20 år</button>
+        <a href="//leoslekland.se/" id="age-fail" class="text-l text-teal-500">Jag är ett barn</a>
+      </div>
     </div>
   </div>
-</div>
 
-<script>
-  if(readCookie('age-check') === 'true') {
-    document.querySelector('#age-check').classList.add('hidden');
-  }
-
-  document.querySelector('#age-ok').addEventListener("click",function() {
-    if (readCookie('cookie-accepted') == 'true') {
-      //only create cookie if cookies are allowed
-      createCookie('age-check','true',31);
+  <script>
+    if(readCookie('age-check') === 'true') {
+      document.querySelector('#age-check').classList.add('hidden');
     }
-    document.querySelector('#age-check').classList.add('hidden');
-  });
 
-  document.querySelector('#accept-cookies').addEventListener("click",function() {
-    createCookie('cookie-accepted','true',31);
-    document.querySelector('#cookie-notice').classList.add('hidden');
-  });
-</script>
+    document.querySelector('#age-ok').addEventListener("click",function() {
+      if (readCookie('cookie-accepted') == 'true') {
+        //only create cookie if cookies are allowed
+        createCookie('age-check','true',31);
+      }
+      document.querySelector('#age-check').classList.add('hidden');
+    });
+
+    document.querySelector('#accept-cookies').addEventListener("click",function() {
+      createCookie('cookie-accepted','true',31);
+      document.querySelector('#cookie-notice').classList.add('hidden');
+    });
+  </script>
+{% endif %}
