--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -4,7 +4,7 @@
   <div class="container mx-auto bg-white min-h-screen">
       <div class="items-center flex flex-col sm:flex-row">
         <div class="flex items-center justify-center w-full mt-6 lg:mt-0">
-          <a href="{{ beer.url | prepend: beer.baseurl }}" class="p-4">
+          <a href="{{ beer.url | prepend: beer.baseurl }}">
             <img class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" src="{{ beer.image }}" alt="{{ beer.name }}">
           </a>
         </div>
