--- a/_includes/beer-list.html
+++ b/_includes/beer-list.html
@@ -12,7 +12,7 @@
         <div class="sm:flex sm:flex-col mt-6 space-y-4">
           <h1 class="text-6xl font-title font-semibold text-gray-800 uppercase lg:text-8xl text-center">{{ beer.name }}, {{ beer.alcohol }}</h1>
 
-          <div class="sm:flex w-full place-content-end">
+          <div class="sm:flex w-full justify-center">
             <a href="{{ beer.url | prepend: beer.baseurl }}">
               <button class="my-4 w-full sm:w-auto text-xl sm:text-xl px-4 py-2 font-medium tracking-wide text-gray-600 transition-colors duration-200 transform rounded-md ring ring-teal-600 hover:bg-teal-600 focus:outline-none focus:ring-opacity-80 hover:text-white">
                 Läs mer
