--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,6 @@
   </body>
 
   {% include footer.html %}
-  {% include age-check.html %}
-  {% include cookie-consent.html %}
+  {% include molecules/age-check.html %}
+  {% include molecules/cookie-consent.html %}
 </html>
