--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       <div class="container px-6 py-4 mx-auto">
           <div class="lg:flex">
               <div class="mt-6 lg:mt-0 lg:flex-1">
-                  <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+                  <div class="grid grid-cols-1 gap-6 sm:grid-cols-2">
                     <div>
                       <h3 class="text-gray-700 uppercase">Kontakt</h3>
                       <div class="block">
