--- a/_includes/molecules/beer-list.html
+++ b/_includes/molecules/beer-list.html
@@ -5,7 +5,10 @@
       <div class="items-center flex flex-col sm:flex-row">
         <div class="flex items-center justify-center w-full mt-6 lg:mt-0">
           <a href="{{ beer.url | prepend: beer.baseurl }}">
-            <img class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" src="{{ beer.image }}" alt="{{ beer.name }}">
+            <picture>
+              <source class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" srcset="{{ beer.image }}.webp" type="image/webp">
+              <img class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" src="{{ beer.image }}.png">
+            </picture>
           </a>
         </div>
 
