--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
                       <div class="block">
                         <a href="/cookies-privacy" class="inline-block text-sm text-gray-600 hover:underline">Cookies & Privacy Policy</a>
                       </div>
-                      <div class="flex space-x-4 mt-6">
+                      <div class="flex space-x-4 my-6">
                         <a href="//untappd.com/GagnefBrewing" target="_blank" class="items-center mt-2 text-sm text-gray-600 hover:underline">
                           <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/untappd.svg" />
                         </a>
