--- a/_includes/molecules/age-check.html
+++ b/_includes/molecules/age-check.html
@@ -26,6 +26,9 @@
       if (readCookie('cookie-accepted') == 'true') {
         //only create cookie if cookies are allowed
         createCookie('age-check','true',31);
+      } else {
+        //store in memory to save cookie when cookies are allowed
+        window.ageCheckOK = true;
       }
       document.querySelector('#age-check').classList.add('hidden');
     });
