--- a/_includes/molecules/cookie-consent.html
+++ b/_includes/molecules/cookie-consent.html
@@ -1,26 +1,21 @@
-<div id="cookie-notice" class="z-20 fixed block bottom-0 left-0 p-4 bg-white w-full text-gray-600">
+<div id="cookie-notice" class="z-20 fixed block bottom-0 left-0 p-4 bg-white w-full text-gray-600 border-t">
   <p>Vi vill gärna bjuda på en kaka eller två för att hemsidan ska bli så mumsig som möjligt.</p>
-  <p class="mb-2">Är det okej med dig?</p>
   
   <a id="cookie-notice-accept" class="mr-2">
-    <button class="px-4 py-2 font-medium tracking-wide text-white uppercase transition-colors duration-200 transform bg-teal-600 rounded-md hover:bg-teal-500 focus:outline-none focus:ring focus:ring-teal-300 focus:ring-opacity-80">
+    <button class="my-4 text-xl sm:text-xl px-4 py-2 font-medium tracking-wide text-gray-600 transition-colors duration-200 transform rounded-md ring ring-teal-600 hover:bg-teal-600 focus:outline-none focus:ring-opacity-80 hover:text-white">
       Ta emot kaka
     </button>
   </a>
-  <a href="/cookies-privacy" class="hover:underline">Mer info</a>
+  <a href="/cookies-privacy" class="hover:underline italic">Mer info</a>
 </div>
 <script>
-  if(readCookie('cookie-accepted') === 'true') {
+  if(canStoreCookies()) {
     document.querySelector('#cookie-notice').classList.add('hidden');
   }
 
   document.querySelector('#cookie-notice-accept').addEventListener("click",function() {
-    createCookie('cookie-accepted','true',31);
     document.querySelector('#cookie-notice').classList.add('hidden');
-
-    if(window.ageCheckOK) {
-      createCookie('age-check','true',31);
-    }
+    createAcceptCookies();
   });
 
 </script>
