New slogan on index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,13 @@
                         <!--<a href="mailto:example.com" class="inline-block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>-->
                       </div>
                       <div class="block">
-                        <p class="inline-block mt-2 text-gray-600 text-sm">Hedvägen 13</p>
+                        <p class="inline-block mt-2 text-gray-600 text-sm">Gagnef Brewing AB</p>
                       </div>
                       <div class="block">
-                        <p class="inline-block mt-2 text-gray-600 text-sm">785 42 Mockfjärd</p>
+                        <p class="inline-block mt-0 text-gray-600 text-sm">Hedvägen 13</p>
+                      </div>
+                      <div class="block">
+                        <p class="inline-block mt-0 text-gray-600 text-sm">785 42 Mockfjärd</p>
                       </div>
                     </div>
 
