SEO alt socials

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,11 +26,11 @@
                       </div>
                       <div class="flex space-x-4 my-6">
                         <a href="//untappd.com/GagnefBrewing" target="_blank" class="items-center mt-2 text-sm text-gray-600 hover:underline">
-                          <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/untappd.svg" />
+                          <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/untappd.svg" alt="visit gagnef brewing on untappd"/>
                         </a>
 
                         <a href="//instagram.com/gagnefbrewing" target="_blank" class="mt-2 text-sm text-gray-600 hover:underline">
-                          <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/instagram.svg" />
+                          <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/instagram.svg" alt="visit gagnef brewing on instagram" />
                         </a>
                       </div>
                     </div>
