No breadcrumbs on 404

--- a/_includes/components/breadcrumbs.html
+++ b/_includes/components/breadcrumbs.html
@@ -1,3 +1,4 @@
+{% if page.skip_breadcrumbs != true %}
 {% assign icon_size = "w-4 h-4" %}
 {% assign text_color = "gray-600" %}
 
@@ -27,3 +28,4 @@
 
   {% endfor %}
 </div>
+{% endif %}
