--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,35 @@
 
-    <footer class="bg-white border-t">
-      <div class="container px-6 py-4 mx-auto">
+    <footer class="bg-gagnef-gray">
+      <div class="container px-6 py-10 mx-auto">
           <div class="lg:flex">
               <div class="mt-6 lg:mt-0 lg:flex-1">
-                  <div class="grid grid-cols-1 gap-6 sm:grid-cols-2">
+                  <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 text-white ">
                     <div>
-                      <h3 class="text-gray-700 uppercase">Kontakt</h3>
+                      <h3 class="uppercase">Kontakt</h3>
                       <div class="block">
                         <!--<a href="mailto:example.com" class="inline-block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>-->
                       </div>
                       <div class="block">
-                        <p class="inline-block mt-2 text-gray-600 text-sm">Gagnef Brewing AB</p>
+                        <p class="inline-block mt-2 text-sm">Gagnef Brewing AB</p>
                       </div>
                       <div class="block">
-                        <p class="inline-block mt-0 text-gray-600 text-sm">Hedvägen 13</p>
+                        <p class="inline-block mt-0 text-sm">Hedvägen 13</p>
                       </div>
                       <div class="block">
-                        <p class="inline-block mt-0 text-gray-600 text-sm">785 42 Mockfjärd</p>
+                        <p class="inline-block mt-0 text-sm">785 42 Mockfjärd</p>
                       </div>
                     </div>
 
                     <div>
                       <div class="block">
-                        <a href="/cookies-privacy" class="inline-block text-sm text-gray-600 hover:underline">Cookies & Privacy Policy</a>
+                        <a href="/cookies-privacy" class="inline-block text-sm hover:underline">Cookies & Privacy Policy</a>
                       </div>
                       <div class="flex space-x-4 my-6">
-                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="items-center mt-2 text-sm text-gray-600 hover:underline">
+                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="items-center mt-2 text-sm hover:underline">
                           <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/untappd.svg" alt="visit gagnef brewing on untappd"/>
                         </a>
 
-                        <a href="//instagram.com/gagnefbrewing" target="_blank" class="mt-2 text-sm text-gray-600 hover:underline">
+                        <a href="//instagram.com/gagnefbrewing" target="_blank" class="mt-2 text-sm hover:underline">
                           <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/instagram.svg" alt="visit gagnef brewing on instagram" />
                         </a>
                       </div>
