Remove use of 3d cans

--- a/_includes/molecules/beer-list.html
+++ b/_includes/molecules/beer-list.html
@@ -4,11 +4,12 @@
   <div class="container mx-auto bg-white min-h-screen">
       <div class="items-center flex flex-col sm:flex-row">
         <div class="flex items-center justify-center w-full mt-6 lg:mt-0">
-          {%
-            include components/3d-can.html
-            rotation_y = beer.can_rotation_y
-            label = beer.can_label
-          %}
+          <a href="{{ beer.url | prepend: beer.baseurl }}">
+            <picture>
+              <source srcset="{{ beer.image }}.webp" type="image/webp">
+              <img class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" src="{{ beer.image }}.png">
+            </picture>
+          </a>
         </div>
 
         <div class="sm:flex sm:flex-col mt-6 space-y-4">
