--- a/_includes/components/big-button.html
+++ b/_includes/components/big-button.html
@@ -6,23 +6,15 @@ sm:text-2xl
 px-4 py-2
 font-medium
 tracking-wide
-{% if include.textColor %}
-  text-{{ include.textColor  }}
-{% else %}
-  text-white
-{% endif %}
+text-white
 transition-colors
 duration-200
 transform
 rounded-md
 ring
-ring-white
-{% if include.bgColor %}
-  bg-{{ include.bgColor  }}-500
-  hover:bg-{{ include.bgColor  }}-600
-{% else %}
-  hover:bg-teal-600
-{% endif %}
+ring-black
+bg-gagnef-yellow-500
+hover:bg-gagnef-orange-500  
 focus:outline-none
 focus:ring-opacity-80
 ">
