--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-    <footer class="bg-gagnef-gray">
+    <footer class="bg-gagnef-grayblue-500">
       <div class="container px-6 py-10 mx-auto">
           <div class="lg:flex">
               <div class="mt-6 lg:mt-0 lg:flex-1">
