Add scroll anim

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <nav class="bg-white">
-  <div class="container p-4 mx-auto sm:flex sm:justify-between sm:justify-center sm:items-center">
+  <div class="container p-4 mx-auto sm:flex sm:justify-between sm:items-center">
       <div class="sm:flex sm:items-center">
         <div class="flex items-center justify-center sm:justify-between">
           <div>
@@ -9,7 +9,7 @@
           </div>
         </div>
 
-        <div class="flex flex-col text-gray-900 capitalize sm:flex sm:px-16 sm:mx-4 sm:flex-row sm:items-center">
+        <div class="flex flex-col text-gray-900 capitalize sm:px-16 sm:mx-4 sm:flex-row sm:items-center">
           {% for page_data in site.data.page_data %}
             {% for pg in page_data %}
               {%
