--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,4 +8,5 @@
 
   {% include molecules/age-check.html %}
   {% include molecules/cookie-consent.html %}
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </html>
